@@ -18,6 +18,7 @@ package org.springframework.boot.actuate.autoconfigure.security.servlet;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -44,6 +45,7 @@ import org.springframework.mock.web.MockFilterChain;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.mock.web.MockServletContext;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.web.FilterChainProxy;
 import org.springframework.security.web.SecurityFilterChain;
@@ -51,7 +53,6 @@ import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.context.WebApplicationContext;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.springframework.security.config.Customizer.withDefaults;
 
 /**
  * Tests for {@link ManagementWebSecurityAutoConfiguration}.
@@ -144,6 +145,19 @@ class ManagementWebSecurityAutoConfigurationTests {
 	}
 
 	@Test
+	@Deprecated
+	void backOffIfSaml2RelyingPartyAutoConfigurationPresentDeprecated() {
+		this.contextRunner.withConfiguration(AutoConfigurations.of(Saml2RelyingPartyAutoConfiguration.class))
+			.withPropertyValues(
+					"spring.security.saml2.relyingparty.registration.simplesamlphp.identityprovider.single-sign-on.url=https://simplesaml-for-spring-saml/SSOService.php",
+					"spring.security.saml2.relyingparty.registration.simplesamlphp.identityprovider.single-sign-on.sign-request=false",
+					"spring.security.saml2.relyingparty.registration.simplesamlphp.identityprovider.entity-id=https://simplesaml-for-spring-saml.cfapps.io/saml2/idp/metadata.php",
+					"spring.security.saml2.relyingparty.registration.simplesamlphp.identityprovider.verification.credentials[0].certificate-location=classpath:saml/certificate-location")
+			.run((context) -> assertThat(context).doesNotHaveBean(ManagementWebSecurityAutoConfiguration.class)
+				.doesNotHaveBean(MANAGEMENT_SECURITY_FILTER_CHAIN_BEAN));
+	}
+
+	@Test
 	void backOffIfRemoteDevToolsSecurityFilterChainIsPresent() {
 		this.contextRunner.withUserConfiguration(TestRemoteDevToolsSecurityFilterChainConfig.class).run((context) -> {
 			SecurityFilterChain testSecurityFilterChain = context.getBean("testSecurityFilterChain",
@@ -152,7 +166,7 @@ class ManagementWebSecurityAutoConfigurationTests {
 				.getBean("testRemoteDevToolsSecurityFilterChain", SecurityFilterChain.class);
 			List<SecurityFilterChain> orderedSecurityFilterChains = context.getBeanProvider(SecurityFilterChain.class)
 				.orderedStream()
-				.toList();
+				.collect(Collectors.toList());
 			assertThat(orderedSecurityFilterChains).containsExactly(testRemoteDevToolsSecurityFilterChain,
 					testSecurityFilterChain);
 			assertThat(context).doesNotHaveBean(ManagementWebSecurityAutoConfiguration.class);
@@ -160,7 +174,7 @@ class ManagementWebSecurityAutoConfigurationTests {
 	}
 
 	private HttpStatus getResponseStatus(AssertableWebApplicationContext context, String path)
-			throws IOException, jakarta.servlet.ServletException {
+			throws IOException, javax.servlet.ServletException {
 		FilterChainProxy filterChainProxy = context.getBean(FilterChainProxy.class);
 		MockServletContext servletContext = new MockServletContext();
 		MockHttpServletResponse response = new MockHttpServletResponse();
@@ -173,17 +187,18 @@ class ManagementWebSecurityAutoConfigurationTests {
 	}
 
 	@Configuration(proxyBeanMethods = false)
-	static class CustomSecurityConfiguration {
+	@SuppressWarnings("deprecation")
+	static class CustomSecurityConfiguration
+			extends org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter {
 
-		@Bean
-		SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-			http.authorizeHttpRequests((requests) -> {
-				requests.requestMatchers(new AntPathRequestMatcher("/foo")).permitAll();
+		@Override
+		protected void configure(HttpSecurity http) throws Exception {
+			http.authorizeRequests((requests) -> {
+				requests.antMatchers("/foo").permitAll();
 				requests.anyRequest().authenticated();
 			});
-			http.formLogin(withDefaults());
-			http.httpBasic(withDefaults());
-			return http.build();
+			http.formLogin(Customizer.withDefaults());
+			http.httpBasic();
 		}
 
 	}
@@ -193,8 +208,8 @@ class ManagementWebSecurityAutoConfigurationTests {
 
 		@Bean
 		SecurityFilterChain testSecurityFilterChain(HttpSecurity http) throws Exception {
-			return http.securityMatcher("/**")
-				.authorizeHttpRequests((authorize) -> authorize.anyRequest().authenticated())
+			return http.antMatcher("/**")
+				.authorizeRequests((authorize) -> authorize.anyRequest().authenticated())
 				.build();
 		}
 
@@ -206,10 +221,14 @@ class ManagementWebSecurityAutoConfigurationTests {
 		@Bean
 		@Order(SecurityProperties.BASIC_AUTH_ORDER - 1)
 		SecurityFilterChain testRemoteDevToolsSecurityFilterChain(HttpSecurity http) throws Exception {
-			http.securityMatcher(new AntPathRequestMatcher("/**"));
-			http.authorizeHttpRequests((requests) -> requests.anyRequest().anonymous());
-			http.csrf((csrf) -> csrf.disable());
-			return http.build();
+			return http.requestMatcher(new AntPathRequestMatcher("/**"))
+				.authorizeRequests()
+				.anyRequest()
+				.anonymous()
+				.and()
+				.csrf()
+				.disable()
+				.build();
 		}
 
 	}
